[package]
name = "etherscan_explorer_cmd_line"
version = "0.0.1"
edition = "2021"
authors = ["Sushmit"]
license = "MIT"
description = "Command Line Etherscan Explorer"
repository = "https://github.com/sushmitsarmah/etherscan_explorer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"]}
crossterm = "0.27.0"
dotenv = "0.15.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
web3-unit-converter = "0.1.1"

